; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_revparse.c_test_refs_revparse__issue_994.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_revparse.c_test_refs_revparse__issue_994.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [25 x i8] c"origin/bim_with_3d@11296\00", align 1
@.str.2 = private unnamed_addr constant [38 x i8] c"refs/remotes/origin/bim_with_3d@11296\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_revparse__issue_994() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = call i32* @cl_git_sandbox_init(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  store i32* %5, i32** %1, align 8
  %6 = load i32, i32* @GIT_ENOTFOUND, align 4
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @git_revparse_single(i32** %4, i32* %7, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 @cl_assert_equal_i(i32 %6, i32 %8)
  %10 = load i32, i32* @GIT_ENOTFOUND, align 4
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @git_revparse_single(i32** %4, i32* %11, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0))
  %13 = call i32 @cl_assert_equal_i(i32 %10, i32 %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i32 @git_repository_head(i32** %2, i32* %14)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32*, i32** %1, align 8
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @git_reference_target(i32* %18)
  %20 = call i32 @git_reference_create(i32** %3, i32* %17, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0), i32 %19, i32 0, i32* null)
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = load i32*, i32** %1, align 8
  %23 = call i32 @git_revparse_single(i32** %4, i32* %22, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %24 = call i32 @cl_git_pass(i32 %23)
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @git_object_free(i32* %25)
  %27 = load i32*, i32** %1, align 8
  %28 = call i32 @git_revparse_single(i32** %4, i32* %27, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0))
  %29 = call i32 @cl_git_pass(i32 %28)
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @git_object_free(i32* %30)
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @git_reference_free(i32* %32)
  %34 = load i32*, i32** %2, align 8
  %35 = call i32 @git_reference_free(i32* %34)
  %36 = call i32 (...) @cl_git_sandbox_cleanup()
  ret void
}

declare dso_local i32* @cl_git_sandbox_init(i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_revparse_single(i32**, i32*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_head(i32**, i32*) #1

declare dso_local i32 @git_reference_create(i32**, i32*, i8*, i32, i32, i32*) #1

declare dso_local i32 @git_reference_target(i32*) #1

declare dso_local i32 @git_object_free(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @cl_git_sandbox_cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
